--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,11 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "baseUrl": "./", // 解析非相对模块的基地址，默认是当前目录
     "paths": {
-      "@/*": [
-        "src/*"
-      ] //路径映射，相对于baseUrl
+      "@/*": ["src/*"] //路径映射，相对于baseUrl
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -28,12 +22,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [
     {
       "path": "./tsconfig.node.json"
